@@ -13,6 +13,10 @@ DecisionGranted = "Request granted"
 DecisionMotivation = "Decision motivation"
 DecisionPending = "Pending review"
 DecisionDenied = "Request denied"
+DecisionsDenied = "Requests denied"
+DecisionNotDenied = "Request not denied"
+SomeDecisionsNotDenied = "Some requests are not denied"
+DecisionsNotDenied = "Requests not denied"
 DeniedRequests = "Denied requests"
 DenierComponent = "Deny a request"
 Deny = "Deny"
